--- a/envs/op-node.env
+++ b/envs/op-node.env
@@ -2,6 +2,8 @@ OP_NODE_L1_ETH_RPC="<your ethereum mainnet rpc>"
 OP_NODE_L2_ENGINE_RPC=http://l2:8551
 OP_NODE_L2_ENGINE_AUTH=/config/jwt-secret.txt
 OP_NODE_ROLLUP_CONFIG=/config/rollup.json
+OP_NODE_SEQUENCER_L1_CONFS=15
+OP_NODE_VERIFIER_L1_CONFS=15
 OP_NODE_RPC_ADDR=0.0.0.0
 OP_NODE_RPC_PORT=9545
 OP_NODE_P2P_LISTEN_IP=0.0.0.0
