feat: update env for OP_NODE_NEAR_DA_NETWORK

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-# NETWORK should be mainnet or sepolia
-NETWORK=mainnet
-OP_NODE_L1_ETH_RPC="your_l1_rpc_url"
+NETWORK=mainnet # mainnet or sepolia
+OP_NODE_L1_ETH_RPC="your_eth_rpc_url"
+#  near rpc url, or just use offical one by using "Mainnet" or "Testnet"
+OP_NODE_NEAR_DA_NETWORK="Mainnet" # Mainnet or Testnet
